--- a/index.html
+++ b/index.html
@@ -24,15 +24,22 @@
   </head>
   <body>
     <div class="container">
-      <h1>Uni Koblenz Mensa App</h1>
 
-      <div class="videoWrapper">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/0uFNf10uA0g" frameborder="0" allowfullscreen></iframe>
+      <div class="jumbotron">
+        <h1>Uni Koblenz Mensa App</h1>
+        <p>A Mensa App that does not suck (as much).</p>
       </div>
+
+      <p>
+        <div class="videoWrapper">
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/0uFNf10uA0g" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </p>
 
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
