--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Uni Koblenz Mensa</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
+
 
     <style media="screen">
       .videoWrapper {
@@ -23,6 +25,8 @@
     </style>
   </head>
   <body>
+    <a class="github-fork-ribbon" href="https://github.com/turbopope/Uni-Koblenz-Mensa" title="Fork me on GitHub">Fork me on GitHub</a>
+
     <div class="container">
 
       <div class="jumbotron">
