Add some jumbotron

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <style media="screen">
       .videoWrapper {
@@ -27,6 +27,20 @@
         text-align: right;
         margin-bottom: 12px;
       }
+
+      .donate-button {
+        font-size: 28pt;
+      }
+
+      p {
+        margin-bottom: 24px;
+      }
+
+      .jumbotron {
+        background-color: #FFC107;
+        color: white;
+        margin-top: 18px;
+      }
     </style>
   </head>
   <body>
@@ -38,6 +52,15 @@
         <h1>Uni Koblenz Mensa App</h1>
         <p>A Mensa App that does not suck (as much).</p>
       </div>
+
+      <p>
+        <a href="#">
+          <i class="fa fa-usd donate-button" aria-hidden="true"></i>
+          <i class="fa fa-usd donate-button" aria-hidden="true"></i>
+          <i class="fa fa-usd donate-button" aria-hidden="true"></i>
+        </a>
+        Pls send me the moneyz! Ich brauche 20€ um die App in den Play Store zu stellen.
+      </p>
 
       <p>
         <div class="videoWrapper">
