Fix donate link

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
   <body>
     <a class="github-fork-ribbon" href="https://github.com/turbopope/Uni-Koblenz-Mensa" title="Fork me on GitHub">Fork me on GitHub</a>
 
-    <img src="kickstarter.jpg" alt="" class="frontimage"/>
+    <img src="kickstarter.jpg" alt="Blurry guy looks in camera." class="frontimage"/>
 
     <div class="container">
 
       <p class="donate-button-container">
-        <a href="#" class="btn btn-myprimary donate-button">
+        <a href="https://paypal.me/turbopope/1" target="about:blank" class="btn btn-myprimary donate-button">
           <i class="fa fa-usd" aria-hidden="true"></i>
           <i class="fa fa-usd" aria-hidden="true"></i>
           <i class="fa fa-usd" aria-hidden="true"></i>
