--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
       </p>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Eine minimalistische open source Android Mensa-App für die Uni Koblenz, die nicht (ganz) scheiße aussieht.
       </p>
-
       <p>
-        <a href="https://paypal.me/turbopope/1">PLZ send me the moneyz!!!</a> Wenn mir jeder 21€ senden würde, dann wäre diese Kampagne nach nur einer Spende vorbei!
+        Ich brauche 20€ um die App in den Play-Store zu laden und zusätzlich 1€ für die 5% Kickstarter-Gebühren.
+      </p>
+      <p>
+        <a href="https://paypal.me/turbopope/1">PLZ send me the moneyz!!!</a> Wenn mir jeder 20€ senden würde, dann wäre diese Kampagne nach nur einer Spende vorbei!
       </p>
 
       <hr>
