Make donate button more obvious

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <p class="donate-button-container">
         <a href="https://paypal.me/turbopope/1" target="about:blank" class="btn btn-myprimary donate-button">
           <i class="fa fa-usd" aria-hidden="true"></i>
-          <i class="fa fa-usd" aria-hidden="true"></i>
+          DONATE
           <i class="fa fa-usd" aria-hidden="true"></i>
         </a>
         <br>
