--- a/index.html
+++ b/index.html
@@ -56,12 +56,16 @@
         background-color: #FFC107;
         color: white;
       }
+
+      a, a:hover, a:active, a:visited {
+        color: #FFC107;
+      }
     </style>
   </head>
   <body>
     <a class="github-fork-ribbon" href="https://github.com/turbopope/Uni-Koblenz-Mensa" title="Fork me on GitHub">Fork me on GitHub</a>
 
-    <img src="kickstarter.jpg" alt="Blurry guy looks in camera." class="frontimage"/>
+    <img src="gh-pages-header.jpg" alt="Blurry guy looks in camera." class="frontimage"/>
 
     <div class="container">
 
@@ -73,7 +77,7 @@
         </a>
         <br>
         <br>
-        Pls send me the moneyz! Ich brauche 20€ um die App in den Play Store zu stellen.
+        Pls send me the moneyz! Ich brauche nur 20€.
       </p>
 
       <p>
@@ -83,19 +87,19 @@
       </p>
 
       <p>
-        Eine minimalistische open source Android Mensa-App für die Uni Koblenz, die nicht (ganz) scheiße aussieht.
+        Uni Koblenz Mensa ist eine minimalistische open source Android Mensa-App für den Campus Koblenz, die nicht (ganz) scheiße aussieht, im Gegesatz zu den den anderen Apps.
       </p>
       <p>
-        Ich brauche 20€ um die App in den Play-Store zu laden und zusätzlich 1€ für die 5% Kickstarter-Gebühren.
+        Ich brauche die 20€, um die App in den Play-Store zu laden.
       </p>
       <p>
-        <a href="https://paypal.me/turbopope/1">PLZ send me the moneyz!!!</a> Wenn mir jeder 20€ senden würde, dann wäre diese Kampagne nach nur einer Spende vorbei!
+        <a href="https://paypal.me/turbopope/1">Benutze diesen PayPal-Link, um mir Geld zu spenden.</a> Wenn mir jeder 20€ spenden würde, dann wäre diese Spenden-Kampagne nach nur einer Spende vorbei!
       </p>
 
       <hr>
 
       <footer>
-        <small>Das hier ist der Footer. Er ist ziemlich klein.</small>
+        <small>Das hier ist der Footer. Er ist ziemlich klein. <a href="https://paypal.me/turbopope/1">Hier ist noch mal der Link, falls er oben nicht offensichtlich genug war</a></small>
       </footer>
 
     </div>
